--- a/data/db/source/ertel/3a_sports.yml
+++ b/data/db/source/ertel/3a_sports.yml
@@ -9,8 +9,12 @@ type: file
 author: Suitbert Ertel
 description: |
   Contains a list of 4384 sportsmen
-  Original URL : https://newalchemypress.com/gauquelin/gauquelin_docs/3a_sports.txt
-  Details about this file on page https://newalchemypress.com/gauquelin/research3.php
   File made available online by Nick Kollerstrom
+  Original URL : https://newalchemypress.com/gauquelin/gauquelin_docs/3a_sports.txt
+  Details about this file:
+  https://newalchemypress.com/gauquelin/research3.php
+  https://tig12.github.io/gauquelin5/ertel-4391-sportsmen.html  
 parents: 
+    - ertel4391
     - newalch
+
