--- a/data/db/source/ertel/3a_sports.yml
+++ b/data/db/source/ertel/3a_sports.yml
@@ -4,7 +4,7 @@ document:
     - 2020-08-13 10:03:11+02:00: Thierry Graff, creation
 
 name: newalchemypress.com file 3a_sports.txt
-slug: 3a_sports
+slug: ertel-sport
 type: file
 author: Suitbert Ertel
 description: |
