Doc: Add page muller4-1145-dynasties.html + reorder and clean

--- a/data/db/group/ertel/ertel-4384-sport.yml
+++ b/data/db/group/ertel/ertel-4384-sport.yml
@@ -4,7 +4,7 @@
 #     - 2021-10-28 02:17:35+02:00: Thierry Graff, creation
 
 name: Ertel 4384 sportsmen
-slug: ertel-4384-sportsmen
+slug: ertel-4384-sport
 sources:
   - 3a_sports
 
