--- a/data/db/source/ertel/3a_sports.yml
+++ b/data/db/source/ertel/3a_sports.yml
@@ -4,17 +4,17 @@ document:
     - 2020-08-13 10:03:11+02:00: Thierry Graff, creation
 
 name: newalchemypress.com file 3a_sports.txt
-slug: ertel-sport
+slug: 3a_sports
 type: file
 author: Suitbert Ertel
 description: |
-  Text file containing a list of 4384 sportsmen compiled by Suitbert Ertel
-  <br>File made available online by Nick Kollerstrom
+  Text file containing a list of 4384 sportsmen compiled by Suitbert Ertel.
+  <br>File made available online by Nick Kollerstrom.
   <br>Original URL : <a href="https://newalchemypress.com/gauquelin/gauquelin_docs/3a_sports.txt">https://newalchemypress.com/gauquelin/gauquelin_docs/3a_sports.txt</a>
   <br>Details about this file:
   <ul>
       <li><a href="https://newalchemypress.com/gauquelin/research3.php">https://newalchemypress.com/gauquelin/research3.php</a></li>
-      <li><a href="https://tig12.github.io/gauquelin5/ertel-4391-sportsmen.html">https://tig12.github.io/gauquelin5/ertel-4391-sportsmen.html</a></li>
+      <li><a href="https://tig12.github.io/gauquelin5/ertel-4391-sport.html">https://tig12.github.io/gauquelin5/ertel-4391-sport.html</a></li>
   </ul>
   
 parents: 
