--- a/data/db/group/ertel/ertel-6-para-champions.yml
+++ b/data/db/group/ertel/ertel-6-para-champions.yml
@@ -2,10 +2,11 @@ slug: ertel-6-para-champions
 name: 6 - Para champions
 'n': 535
 sources:
+  - 3a_sports
   - cpara
   - a1
 description: |
   Published by Comité Para for its 1976 test.
   <br>Number claimed by Ertel : 535
 parents: 
-  - ertel4391
+  - ertel-4384-sport
