--- a/data/db/group/ertel/ertel-10-italian-cyclists.yml
+++ b/data/db/group/ertel/ertel-10-italian-cyclists.yml
@@ -1,9 +1,11 @@
 slug: ertel-10-italian-cyclists
 name: 10 - Italian cyclists
 'n': 24
+sources:
+  - 3a_sports
 description: |
   Copied manually by Ertel in Gauquelin's laboratory.
   <br>Considered low-ranking by Gauquelin.
   <br>Number claimed by Ertel : 24
 parents: 
-  - ertel4391
+  - ertel-4384-sport
