--- a/data/db/group/ertel/ertel-3-italian-football.yml
+++ b/data/db/group/ertel/ertel-3-italian-football.yml
@@ -1,9 +1,11 @@
 slug: ertel-3-italian-football
 name: 3 - Italian football
 'n': 599
+sources:
+  - 3a_sports
 description: |
   Italian footballers gathered by Michel Gauquelin and copied manually by Ertel.
   <br>Unpublished by Gauquelin (not famous enough).
   <br>Number claimed by Ertel : 600
 parents: 
-  - ertel4391
+  - ertel-4384-sport
