--- a/data/db/group/ertel/ertel-5-french-occasionals.yml
+++ b/data/db/group/ertel/ertel-5-french-occasionals.yml
@@ -1,10 +1,12 @@
 slug: ertel-5-french-occasionals
 name: 5 - French occasionals
 'n': 202
+sources:
+  - 3a_sports
 description: |
   French sportsmen (and one Italian) not published in A1
   <br>Copied manually by Ertel in Gauquelin's laboratory.
   <br>Considered as "low-low-ranking" by Gauquelin.
   <br>Number claimed by Ertel : 204
 parents: 
-  - ertel4391
+  - ertel-4384-sport
