--- a/data/db/group/ertel/ertel-8-csicop-us.yml
+++ b/data/db/group/ertel/ertel-8-csicop-us.yml
@@ -2,10 +2,11 @@ slug: ertel-8-csicop-us
 name: 8 - CSICOP-U.S.
 'n': 192
 sources:
+  - 3a_sports
   - d10
   - csicop
 description: |
   Part of CSICOP data that are present in D10 file.
   <br>Number claimed by Ertel : 192
 parents: 
-  - ertel4391
+  - ertel-4384-sport
