--- a/data/db/group/ertel/ertel-9-second-european.yml
+++ b/data/db/group/ertel/ertel-9-second-european.yml
@@ -2,9 +2,10 @@ slug: ertel-9-second-european
 name: 9 - Second European
 'n': 450
 sources:
+  - 3a_sports
   - d6
 description: |
   Published in Gauquelin file D6.
   <br>Number claimed by Ertel : 450
 parents: 
-  - ertel4391
+  - ertel-4384-sport
