--- a/data/db/source/csicop/csicop.yml
+++ b/data/db/source/csicop/csicop.yml
@@ -1,12 +1,13 @@
 
 document:
   history:
-    - 2021-07-19 20:37:10+02:00: Thierry Graff, creation
+    - 2021-12-04 00:58:33+01:00: Thierry Graff, creation
 
 name: CSICOP
-slug: csicop-committee
+slug: csicop
 type: organization
 description: |
   <b>Committee for the Scientific Investigation of Claims of the Paranormal</b>
-  <br>Published a test on the "mars effect" in 1979
-  
+  <br>U.S. skeptic group ; published a test on the "mars effect" in 1979 with 408 U.S. sport champions
+
+      
