--- a/data/db/source/ertel/3a_sports.yml
+++ b/data/db/source/ertel/3a_sports.yml
@@ -3,7 +3,7 @@ document:
   history:
     - 2020-08-13 10:03:11+02:00: Thierry Graff, creation
 
-name: newalchemypress.com file 3a_sports.txt
+name: 3a_sports.txt
 slug: 3a_sports
 type: file
 author: Suitbert Ertel
@@ -19,3 +19,4 @@ description: |
   
 parents: 
   - newalch
+  - ertel
