Continue Ertel sportsmen tmp2db (corrections, debugs)

--- a/data/db/group/ertel/ertel-10-italian-cyclists.yml
+++ b/data/db/group/ertel/ertel-10-italian-cyclists.yml
@@ -6,6 +6,6 @@ sources:
 description: |
   Copied manually by Ertel in Gauquelin's laboratory.
   <br>Considered low-ranking by Gauquelin.
-  <br>Number claimed by Ertel : 24
+  <br>Number according to Ertel : 24
 parents: 
   - ertel-4384-sport
