--- a/data/db/group/ertel/ertel-11-lower-french.yml
+++ b/data/db/group/ertel/ertel-11-lower-french.yml
@@ -5,6 +5,6 @@ sources:
   - 3a_sports
 description: |
   Copied manually by Ertel in Gauquelin's laboratory.
-  <br>Number claimed by Ertel : 455
+  <br>Number according to Ertel : 455
 parents: 
   - ertel-4384-sport
