--- a/data/db/group/ertel/ertel-13-plus-special.yml
+++ b/data/db/group/ertel/ertel-13-plus-special.yml
@@ -10,6 +10,6 @@ description: |
   where birth records were difficult to obtain. Gauquelin indicated he tried
   hard to obtain the data since the athletes in question were famous, and he
   was successful in 27 cases."
-  <br>Number claimed by Ertel : 27
+  <br>Number according to Ertel : 27
 parents: 
   - ertel-4384-sport
