--- a/data/db/group/ertel/ertel-2-first-european.yml
+++ b/data/db/group/ertel/ertel-2-first-european.yml
@@ -10,6 +10,6 @@ description: |
       <li>915 non-French athletes used for Gauquelin 1960 european replication</li>
       <li>274 casual data gathering</li>
   </ul>
-  <br>Number claimed by Ertel : 1189
+  <br>Number according to Ertel : 1189
 parents: 
   - ertel-4384-sport
