--- a/data/db/group/ertel/ertel-4-german-various.yml
+++ b/data/db/group/ertel/ertel-4-german-various.yml
@@ -5,6 +5,6 @@ sources:
   - 3a_sports
 description: |
   German birth dates. Origin of this group is not clearly described by Ertel. Possibly gathered by Gauquelin and copied manually by Ertel.
-  <br>Number claimed by Ertel : 117
+  <br>Number according to Ertel : 117
 parents: 
   - ertel-4384-sport
