--- a/data/db/group/ertel/ertel-4384-sport.yml
+++ b/data/db/group/ertel/ertel-4384-sport.yml
@@ -12,8 +12,7 @@ description: |
   4384 sportsmen compiled by Suitbert Ertel, coming from Gauquelin A1, D6, D10 and the 3 skeptic tests: Comité Para (Belgium 1976), CSICOP (USA 1979), CFEPP (France 1996).
   <br>N with birth time : <b>2086</b> (47.58 %)
   <br>N without birth time : <b>2297</b> (52.4 %)
-  <br>Published by Suitbert Ertel in 1988 - original article available online: <a href="https://www.scientificexploration.org/docs/2/jse_02_1_ertel.pdf">"Raising the Hurdle for the Athletes' Mars Effect: Association Co-Varies With Eminence" on scientificexploration.org</a>
-  <br>Details about data are given p 58.
+  <br>Published by Suitbert Ertel in 1988 - original article available online: <a href="https://www.scientificexploration.org/docs/2/jse_02_1_ertel.pdf">"Raising the Hurdle for the Athletes' Mars Effect: Association Co-Varies With Eminence" on scientificexploration.org</a>. Details about data are given p 58 of the article.
   <br>In the article, Ertel announces 4391 sportsmen.
 
 children:
