--- a/data/db/group/ertel/ertel-6-para-champions.yml
+++ b/data/db/group/ertel/ertel-6-para-champions.yml
@@ -7,6 +7,6 @@ sources:
   - a1
 description: |
   Published by Comité Para for its 1976 test.
-  <br>Number claimed by Ertel : 535
+  <br>Number according to Ertel : 535
 parents: 
   - ertel-4384-sport
