--- a/data/db/group/ertel/ertel-9-second-european.yml
+++ b/data/db/group/ertel/ertel-9-second-european.yml
@@ -6,6 +6,6 @@ sources:
   - d6
 description: |
   Published in Gauquelin file D6.
-  <br>Number claimed by Ertel : 450
+  <br>Number according to Ertel : 450
 parents: 
   - ertel-4384-sport
