--- a/data/db/person/muller-612-men.yml
+++ b/data/db/person/muller-612-men.yml
@@ -1,5 +1,5 @@
 #
-# Human corrections to file data/tmp/muller/2-men/muller2-612-men.csv
+# Human corrections to data coming from file data/tmp/muller/2-men/muller2-612-men.csv
 # Fields sorted by Müller id
 # WD base url = https://www.wikidata.org/wiki/Special:EntityPage/
 # 
