--- a/data/db/group/ertel/ertel-1-first-french.yml
+++ b/data/db/group/ertel/ertel-1-first-french.yml
@@ -7,6 +7,6 @@ sources:
   - a1
 description: |
   Records coming from Michel Gauquelin "L'influence des astres", 1955.
-  <br>Number claimed by Ertel : 568
+  <br>Number according to Ertel : 568
 parents: 
   - ertel-4384-sport
