--- a/data/db/group/ertel/ertel-3-italian-football.yml
+++ b/data/db/group/ertel/ertel-3-italian-football.yml
@@ -6,6 +6,6 @@ sources:
 description: |
   Italian footballers gathered by Michel Gauquelin and copied manually by Ertel.
   <br>Unpublished by Gauquelin (not famous enough).
-  <br>Number claimed by Ertel : 600
+  <br>Number according to Ertel : 600
 parents: 
   - ertel-4384-sport
