--- a/data/db/group/ertel/ertel-5-french-occasionals.yml
+++ b/data/db/group/ertel/ertel-5-french-occasionals.yml
@@ -7,6 +7,6 @@ description: |
   French sportsmen (and one Italian) not published in A1
   <br>Copied manually by Ertel in Gauquelin's laboratory.
   <br>Considered as "low-low-ranking" by Gauquelin.
-  <br>Number claimed by Ertel : 204
+  <br>Number according to Ertel : 204
 parents: 
   - ertel-4384-sport
