--- a/data/db/group/ertel/ertel-7-para-lowers.yml
+++ b/data/db/group/ertel/ertel-7-para-lowers.yml
@@ -7,6 +7,6 @@ sources:
 description: |
   Part of a list of 241 champions not included in the Compité Para 1976 test because they had participated in fewer than 20 international events.
   <br>Copied manually by Ertel in Gauquelin's laboratory (he copied only records for which Mars sector had benn computed).
-  <br>Number claimed by Ertel : 76
+  <br>Number according to Ertel : 76
 parents: 
   - ertel-4384-sport
