--- a/data/db/person/muller-234-women.yml
+++ b/data/db/person/muller-234-women.yml
@@ -1,5 +1,5 @@
 #
-# Human corrections to file data/tmp/muller/3-women/muller3-234-women.csv
+# Human corrections to data coming from file data/tmp/muller/3-women/muller3-234-women.csv
 # Fields sorted by Müller id
 # WD base url = https://www.wikidata.org/wiki/Special:EntityPage/
 # 
