Müller 1083: update doc + prepare integration in database of fix A2 and E3

--- a/data/db/init/newalch-tweak/muller5-1083-medics.yml
+++ b/data/db/init/newalch-tweak/muller5-1083-medics.yml
@@ -33,6 +33,14 @@
     Precise birth place is Tour-de-Faure (part of Saint-Cirq-la-Popie)
 
 -
+  NR: 76
+  FNAME: Benjamin
+
+-
+  NR: 77
+  FNAME: Benoit
+
+-
   NR: 152
   NOB: de
   FNAME: Brun
@@ -42,6 +50,10 @@
   NR: 323
   FNAME: Dujarric de La Rivere
   GNAME: Auguste René
+
+-
+  NR: 341
+  FNAME: Euziere
 
 -
   NR: 363
