Revisit Gauquelin series A import
- Write commands\gauq\A\tmp2db\checkDate and use it to fix errors
- Change timezone offset computation for France before 1891 (use
  Françoise Gauquelin book "Problèmes de l'heure résolus pour le monde entier")

--- a/data/db/init/lerrcp-tweak/A2.yml
+++ b/data/db/init/lerrcp-tweak/A2.yml
@@ -6,6 +6,13 @@
 #
 
 -
+  NUM: 241
+  PLACE: LEDIGNAN
+  build-notes: |
+    2021-12-19 00:47:28+01:00 Fixed from https://fr.wikipedia.org/wiki/Georges_Dumas
+    Error identified thanks to execution of tmp2db::checkDate().
+    
+-
   NUM: 255
   DATE-UT: '1864-06-08 03:40:40'
   C3: 4
@@ -27,3 +34,22 @@
   FNAME: Cannavò
   build-notes: |
     2021-08-06 08:18:52+02:00 Fixed typo in cura file (Cannavò instead of Cannavo')
+  
+-
+  NUM: 2841
+  PLACE: VALLERAUGUE
+  build-notes: |
+    2021-12-18 21:12:33+01:00 Fixed typo in cura file (VALLERAUGUE instead of VALLARAUGUE)
+    Error identified thanks to execution of tmp2db::checkDate().
+
+-
+  NUM: 2886
+  LG: 2.73222
+  LAT: 49.31111
+  C2: 60
+  DATE-UT: '1839-01-30 14:49:04'
+  build-notes: |
+    2021-12-18 21:58:20+01:00 This record is the same as A3-950
+    Coordinates of birth place differ, both are erroneous.
+    DATE-UT also differ! Consultation of birth certificate shows that both are erroneous (Gauquelin recieved the declaration date, not the birth date) 
+    Error identified thanks to execution of tmp2db::checkDate().
