--- a/src/model/Person.yml
+++ b/src/model/Person.yml
@@ -4,12 +4,10 @@
 # Used to create an empty person
 #
 
+# int - id managed by dbms
 id: 
 
 slug:
-
-# Regular array of source slugs
-sources: []
 
 # key / value pairs
 # key = source slug
@@ -42,7 +40,9 @@ birth:
   date:     # date of the birth certificate
   tzo:      # timezone offset
   date-ut:  # date converted to Universal Time
-  note:     # eg "LMT" or "notime"
+  note:     # supplementary info (eg precise adress of birth place)
+  lmt:      # boolean - true if date is expressed in LMT
+  notime:   # boolean - true if birth time does not exist
   place:
     name:
     c1:
@@ -57,7 +57,9 @@ death:
   date:     # date of the birth certificate
   tz:       # timezone offset
   date-ut:  # date converted to Univesal Time
-  note:     # eg "LMT" or "notime"
+  note:     # supplementary info (eg precise adress of birth place)
+  lmt:      # boolean - true if date is expressed in LMT
+  notime:   # boolean - true if birth time does not exist
   place:
     name:
     c1:
