--- a/data/db/person/muller-612-men.yml
+++ b/data/db/person/muller-612-men.yml
@@ -6,7 +6,8 @@
 # 2021-09-05 03:27:53+02:00, Thierry Graff : Creation
 
 -
-  ACTION: update
+  ADMIN: 
+    ACTION: update
   ids-in-sources:
     afd2: '6'
     wd: Q152245
@@ -32,7 +33,8 @@
       <br>Retained German version.
 
 -
-  ACTION: update
+  ADMIN: 
+    ACTION: update
   ids-in-sources:
     afd2: '119'
     wd: Q366355
@@ -44,7 +46,8 @@
     - pianist
 
 -
-  ACTION: update
+  ADMIN: 
+    ACTION: update
   ids-in-sources:
     afd2: '160'
     wd: Q38337
@@ -55,7 +58,8 @@
       - Alexandre Dumas père
 
 -
-  ACTION: update
+  ADMIN: 
+    ACTION: update
   ids-in-sources:
     afd2: '186'
     wd: Q129092
@@ -66,7 +70,8 @@
       full: Fernandel
 
 -
-  ACTION: update
+  ADMIN: 
+    ACTION: update
   ids-in-sources:
     afd2: '193'
     wd: Q37064
@@ -77,7 +82,8 @@
 
 
 -
-  ACTION: update
+  ADMIN: 
+    ACTION: update
   ids-in-sources:
     afd2: '238'
     wd: Q302873
@@ -88,7 +94,8 @@
       full: Grock
 
 -
-  ACTION: update
+  ADMIN: 
+    ACTION: update
   ids-in-sources:
     afd2: '329'
     wd: Q4724
@@ -97,7 +104,8 @@
     family: Jeanneret-Gris
     
 -
-  ACTION: update
+  ADMIN: 
+    ACTION: update
   ids-in-sources:
     afd2: '416'
     wd: Q60684
@@ -107,7 +115,8 @@
     nobl: von 
 
 -
-  ACTION: update
+  ADMIN: 
+    ACTION: update
   ids-in-sources:
     afd2: '429'
     wd: Q16975
@@ -120,7 +129,8 @@
       given: Giovanni Battista Enrico Antonio Maria
 
 -
-  ACTION: update
+  ADMIN: 
+    ACTION: update
   ids-in-sources:
     afd2: '550'
     wd: Q42247
@@ -130,4 +140,3 @@
       family: Prudhomme
     fame:
       full: Sully-Prudhomme
-      
