--- a/data/db/group/ertel/ertel-10-italian-cyclists.yml
+++ b/data/db/group/ertel/ertel-10-italian-cyclists.yml
@@ -1,5 +1,6 @@
 slug: ertel-10-italian-cyclists
-name: 10 - Italian cyclists
+name: Ertel's subsample 10 - Italian cyclists
+type: history
 'n': 24
 sources:
   - 3a_sports
