--- a/data/db/group/ertel/ertel-2-first-european.yml
+++ b/data/db/group/ertel/ertel-2-first-european.yml
@@ -1,5 +1,6 @@
 slug: ertel-2-first-european
-name: 2 - First European
+name: Ertel's subsample 2 - First European
+type: history
 'n': 1202
 sources:
   - 3a_sports
