--- a/data/db/group/ertel/ertel-3-italian-football.yml
+++ b/data/db/group/ertel/ertel-3-italian-football.yml
@@ -1,5 +1,6 @@
 slug: ertel-3-italian-football
-name: 3 - Italian football
+name: Ertel's subsample 3 - Italian football
+type: history
 'n': 599
 sources:
   - 3a_sports
