--- a/data/db/group/ertel/ertel-4-german-various.yml
+++ b/data/db/group/ertel/ertel-4-german-various.yml
@@ -1,5 +1,6 @@
 slug: ertel-4-german-various
-name: 4 - German various
+name: Ertel's subsample 4 - German various
+type: history
 'n': 115
 sources:
   - 3a_sports
