--- a/data/db/group/ertel/ertel-5-french-occasionals.yml
+++ b/data/db/group/ertel/ertel-5-french-occasionals.yml
@@ -1,5 +1,6 @@
 slug: ertel-5-french-occasionals
-name: 5 - French occasionals
+name: Ertel's subsample 5 - French occasionals
+type: history
 'n': 202
 sources:
   - 3a_sports
