--- a/data/db/group/ertel/ertel-9-second-european.yml
+++ b/data/db/group/ertel/ertel-9-second-european.yml
@@ -1,5 +1,6 @@
 slug: ertel-9-second-european
-name: 9 - Second European
+name: Ertel's subsample 9 - Second European
+type: history
 'n': 450
 sources:
   - 3a_sports
