--- a/data/db/group/ertel/ertel-11-lower-french.yml
+++ b/data/db/group/ertel/ertel-11-lower-french.yml
@@ -1,5 +1,6 @@
 slug: ertel-11-lower-french
-name: 11 - Lower French
+name: Ertel's subsample 11 - Lower French
+type: history
 'n': 453
 sources:
   - 3a_sports
