--- a/data/db/group/ertel/ertel-13-plus-special.yml
+++ b/data/db/group/ertel/ertel-13-plus-special.yml
@@ -1,5 +1,6 @@
 slug: ertel-13-plus-special
-name: 13 - Plus special
+name: Ertel's subsample 13 - Plus special
+type: history
 'n': 27
 sources:
   - 3a_sports
