--- a/data/db/group/ertel/ertel-6-para-champions.yml
+++ b/data/db/group/ertel/ertel-6-para-champions.yml
@@ -1,5 +1,6 @@
 slug: ertel-6-para-champions
-name: 6 - Para champions
+name: Ertel's subsample 6 - Para champions
+type: history
 'n': 535
 sources:
   - 3a_sports
