--- a/data/db/group/ertel/ertel-7-para-lowers.yml
+++ b/data/db/group/ertel/ertel-7-para-lowers.yml
@@ -1,5 +1,6 @@
 slug: ertel-7-para-lowers
-name: 7 - Para lowers
+name: Ertel's subsample 7 - Para lowers
+type: history
 'n': 76
 sources:
   - 3a_sports
