--- a/src/model/Person.yml
+++ b/src/model/Person.yml
@@ -1,4 +1,3 @@
-
 #
 # Describes the structure of a Person
 # Used to create an empty person
@@ -29,7 +28,7 @@ name:
     given:
   nobl:             # nobiliary-particle: de d' di del von...
   fame:             # stage, scene
-    full:           # eg Mistinguett or Stromae
+    full:           # ex Mistinguett or Stromae
     family: 
     given: 
   alter: []         # alternative names, like nicknames, or author names
@@ -83,12 +82,8 @@ acts: []
 
 history: []
 
-# key / value pairs
-# keys: string identifying the kind of check needed
-# keys can be any string - standard keys exist, see constants of class model.Issue
-# values: description of the reason leading to the need to check the person
-# Note: initialized to null because php cannot make the difference between
-# initialization to empty map {} and empty array []
-issues: 
+# regular array of strings
+issues: []
 
+# regular array of strings
 notes: []
