Remove code repetition in Muller and AFD classes

--- a/data/db/source/muller/muller.yml
+++ b/data/db/source/muller/muller.yml
@@ -7,4 +7,4 @@ name: Arno Müller
 slug: muller
 type: person
 description: |
-  
+  <b>Arno Müller</b> (1930 - 2005) was a German psychologist who collected data and made replications of Gauquelin works.
